--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   application:
     name: securecapita
   datasource:
-    username: postgres
-    password: password
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     url: jdbc:postgresql://34.65.60.216/securecapita
   jpa:
     hibernate:
